# 2024_7Dof

./: README.md  cul_pos.csv  draw_plot.py  frames_2024-11-04_21.45.22.gv  real_pos.csv
install/: local_setup.sh  setup.sh
install/apf_interfaces/share/apf_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/apf_interfaces/share/apf_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  apf_interfacesConfig-version.cmake  apf_interfacesConfig.cmake  apf_interfaces__rosidl_typesupport_cppExport-release.cmake  apf_interfaces__rosidl_typesupport_cppExport.cmake  apf_interfaces__rosidl_typesupport_introspection_cExport-release.cmake  apf_interfaces__rosidl_typesupport_introspection_cExport.cmake  apf_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_apf_interfaces__rosidl_generator_cExport.cmake  export_apf_interfaces__rosidl_generator_cppExport.cmake  export_apf_interfaces__rosidl_typesupport_fastrtps_cExport-release.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/apf_interfaces/share/apf_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/apf_interfaces/share/apf_interfaces/msg/: Distance.idl  Distance.msg  Jacobian.idl  Jacobian.msg
install/apf_interfaces/share/apf_interfaces/srv/: RRTSPoints.idl  RRTSPoints.srv  RRTSPoints_Request.msg  RRTSPoints_Response.msg
install/apf_nodes/share/apf_nodes/: package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/apf_package/lib/apf_package/: apf_main_node  cul_distance_node  path_planning_node  save_jaco
install/apf_package/share/apf_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/apf_package/share/apf_package/cmake/: apf_packageConfig-version.cmake  apf_packageConfig.cmake
install/apf_package/share/apf_package/environment/: ament_prefix_path.dsv  path.dsv
install/culjaco/lib/culjaco/: forward  forward_node  jaco_node  listener  save_position  talker
install/culjaco/share/culjaco/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml
install/culjaco/share/culjaco/cmake/: culjacoConfig-version.cmake  culjacoConfig.cmake
install/culjaco/share/culjaco/environment/: ament_prefix_path.dsv  path.dsv
install/external_torque_sensor_broadcaster/include/external_torque_sensor_broadcaster/: external_torque_sensor.hpp  external_torque_sensor_broadcaster.hpp
install/external_torque_sensor_broadcaster/share/external_torque_sensor_broadcaster/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/external_torque_sensor_broadcaster/share/external_torque_sensor_broadcaster/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  external_torque_sensor_broadcasterConfig-version.cmake  external_torque_sensor_broadcasterConfig.cmake
install/external_torque_sensor_broadcaster/share/external_torque_sensor_broadcaster/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/iiwa_bringup/share/iiwa_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/iiwa_bringup/share/iiwa_bringup/cmake/: iiwa_bringupConfig-version.cmake  iiwa_bringupConfig.cmake
install/iiwa_bringup/share/iiwa_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/iiwa_bringup/share/iiwa_bringup/launch/: iiwa_pose_tracking.launch.py  iiwa_servoing.launch.py  iiwa_test_joint_trajectory_controller.launch.py
install/iiwa_description/share/iiwa_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/iiwa_description/share/iiwa_description/cmake/: iiwa_descriptionConfig-version.cmake  iiwa_descriptionConfig.cmake
install/iiwa_description/share/iiwa_description/config/: iiwa.config.xacro  iiwa_controllers.yaml
install/iiwa_description/share/iiwa_description/environment/: ament_prefix_path.dsv  iiwa_description.sh  path.dsv
install/iiwa_description/share/iiwa_description/moveit2/: iiwa_joint_limits.yaml  iiwa_moveit2_pose_tracking_config.yaml  iiwa_moveit_controller_config.yaml  kinematics.yaml  planning_pipelines_config.yaml
install/iiwa_description/share/iiwa_description/ros2_control/: iiwa.r2c_hw_ds.xacro
install/iiwa_description/share/iiwa_description/rviz/: moveit.rviz
install/iiwa_description/share/iiwa_description/urdf/: iiwa.urdf.xacro
install/iiwa_moveit2/lib/iiwa_moveit2/: pose_tracking_servo_node  servo_node
install/iiwa_moveit2/share/iiwa_moveit2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/impedance_controller/include/impedance_controller/: visibility_control.h
install/impedance_controller/share/impedance_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
log/: latest_build
src/apf_interfaces/: CMakeLists.txt
src/apf_interfaces/msg/: Distance.msg  Jacobian.msg
src/apf_nodes/: package.xml  setup.cfg  setup.py
src/apf_nodes/apf_nodes/: joint_t_test_node.py
src/apf_package/: CMakeLists.txt  package.xml
src/apf_package/src/: apf_main_node.cpp  cul_distance_node.cpp  path_planning_node.cpp  save_jaco.cpp
src/culjaco/: CMakeLists.txt  package.xml
src/culjaco/src/: cul_jaco.cpp  forward.cpp  forward_node.cpp  publisher_member_function.cpp  save_position.cpp
src/culjaco/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/culjaco/src/log/: latest_build
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
(+227 files in other folders)
